# sdk-nrf

./: west.yml
include/bluetooth/mesh/: gatt_cfg.h  gatt_cfg_cli.h  gatt_cfg_srv.h  gpc.h  gpc_cli.h  gpc_srv.h  models.h  models.rst
samples/bluetooth/mesh/gatt_cfg/: prj.conf
samples/bluetooth/mesh/light/: prj.conf
samples/bluetooth/mesh/light_ctrl/: prj.conf
samples/bluetooth/mesh/light_switch/: prj.conf
samples/bluetooth/mesh/proxy_cfg_srv/: prj.conf
samples/bluetooth/mesh/proxy_test/: prj.conf
samples/bluetooth/mesh/simple_sensor/: prj.conf  sample.yaml
samples/bluetooth/mesh/thingy52_accelerometer_sample/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/bluetooth/mesh/thingy52_light/: README.rst  prj.conf  sample.yaml
samples/bluetooth/mesh/thingy52_light_switch/: README.rst  prj.conf  sample.yaml
samples/bluetooth/mesh/thingy52_rainbow_cli/: README.rst  prj.conf  sample.yaml
samples/bluetooth/mesh/thingy52_rainbow_srv/: README.rst  prj.conf  sample.yaml
samples/bluetooth/mesh/time_dev/: prj.conf  sample.yaml  test.py
samples/bluetooth/mesh/whisle_dim/: sample.yaml
samples/bluetooth/mesh/whistle_tb/: CMakeLists.txt  prj.conf  sample.yaml
samples/nrf9160/mqtt_simple/: CMakeLists.txt  Kconfig  prj.conf
samples/nrf9160/uart_test/: CMakeLists.txt  nrf9160dk_nrf9160ns.overlay  prj.conf  sample.yaml
samples/nrf9160/uart_test/src/: main.c
samples/nrf9160/uart_test_52840/: CMakeLists.txt  prj.conf
subsys/bluetooth/mesh/: CMakeLists.txt  Kconfig.models  gatt_cfg_cli.c  gatt_cfg_srv.c  gpc_cli.c  gpc_srv.c
(+51 files in other folders)
